--- a/build.gradle
+++ b/build.gradle
@@ -26,7 +26,7 @@ tasks.withType(JavaCompile) {
 
 application {
     mainModule = 'com.example.midivideomapper'
-    mainClass = 'com.example.midivideomapper.VideoPlayerApp'
+    mainClass = 'com.example.midivideomapper.Main'
 }
 
 javafx {
